--- a/src/extract_properties.ipynb
+++ b/src/extract_properties.ipynb
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 5,
       "metadata": {
         "id": "TmwpujPHnLnH"
       },
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "sCMIWR-Ydu7j"
       },
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "IwJomn32g5Qr"
       },
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "t1j05lkFgjP8"
       },
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "PqI0WUVchaQz"
       },
@@ -330,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "8e7bq1_kiHaB"
       },
@@ -342,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "88bMWZPRiIlW"
       },
@@ -363,19 +363,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "BqSECOQkiiqH"
       },
       "outputs": [],
       "source": [
-        "training_table = pd.DataFrame.from_dict(dict_test, orient='index')\n",
+        "training_table = pd.DataFrame.from_dict(dict_training, orient='index')\n",
         "training_table.to_csv('../datasets/properties/training_props.csv', index=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "UNfXmRCtjiNf"
       },
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "g8XI3zS7kHn0"
       },
