traying to solve rendering issues

--- a/src/properties_model.ipynb
+++ b/src/properties_model.ipynb
@@ -591,19 +591,7 @@
     "colab": {
      "base_uri": "https://localhost:8080/",
      "height": 1000,
-     "referenced_widgets": [
-      "fdd92d96ce1d4e51a9d43b131ed9f8c2",
-      "6c2d14a92a20476e9d0909ebfb332c42",
-      "09d703876d594e108583d1397c54fe44",
-      "616f27b88bf3486fae4c15b3c1330df7",
-      "6eb35df1df514a19a6158abe66fcbc63",
-      "7aa06421a8cf433e8d3cce3d3aa242ec",
-      "d5df171eb33d453c9caefefa0961d700",
-      "112f47bb1dbb40dead6b5cbe7aae0c25",
-      "769dc4dde7e5476eb817449bb3f1051b",
-      "42293fbc49d44c6eb73dde168a3e032e",
-      "8dbe9a8d5a864f4fbbfc5928e3786aa6"
-     ]
+     "referenced_widgets": []
     },
     "executionInfo": {
      "elapsed": 26494,
