RoBERTa and stats_model

--- a/src/extract_properties.ipynb
+++ b/src/extract_properties.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "o9HMX2-NXvqo"
       },
@@ -29,7 +29,7 @@
         "from SPARQLWrapper import SPARQLWrapper, JSON\n",
         "import pandas as pd\n",
         "import time\n",
-        "from datasets import load_from_disk\n"
+        "from datasets import load_from_disk"
       ]
     },
     {
@@ -44,7 +44,7 @@
       },
       "outputs": [],
       "source": [
-        "# Moubt drive if you are on google colab\n",
+        "# Mount drive if you are on google colab\n",
         "#from google.colab import drive\n",
         "#drive.mount('/content/drive')"
       ]
@@ -177,7 +177,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {
         "id": "sCMIWR-Ydu7j"
       },
@@ -189,7 +189,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 7,
       "metadata": {
         "id": "IwJomn32g5Qr"
       },
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
       "metadata": {
         "id": "t1j05lkFgjP8"
       },
@@ -292,7 +292,7 @@
         "        try:\n",
         "            data = sparql.queryAndConvert()\n",
         "            query_result = get_query_result(data, properties)\n",
-        "            dict_result[k] = query_result\n",
+        "            dict_result[item] = query_result\n",
         "            k += 1\n",
         "\n",
         "        except Exception as e:\n",
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 9,
       "metadata": {
         "id": "PqI0WUVchaQz"
       },
@@ -330,7 +330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {
         "id": "8e7bq1_kiHaB"
       },
@@ -342,7 +342,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 15,
       "metadata": {
         "id": "88bMWZPRiIlW"
       },
@@ -363,37 +363,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 21,
       "metadata": {
         "id": "BqSECOQkiiqH"
       },
       "outputs": [],
       "source": [
         "training_table = pd.DataFrame.from_dict(dict_training, orient='index')\n",
+        "training_table = training_table.reset_index()\n",
+        "training_table.rename(columns={'index': 'item'}, inplace=True)\n",
         "training_table.to_csv('../datasets/properties/training_props.csv', index=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 22,
       "metadata": {
         "id": "UNfXmRCtjiNf"
       },
       "outputs": [],
       "source": [
         "validation_table = pd.DataFrame.from_dict(dict_validation, orient='index')\n",
+        "validation_table = validation_table.reset_index()\n",
+        "validation_table.rename(columns={'index': 'item'}, inplace=True)\n",
         "validation_table.to_csv('../datasets/properties/validation_props.csv', index=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 24,
       "metadata": {
         "id": "g8XI3zS7kHn0"
       },
       "outputs": [],
       "source": [
         "test_table = pd.DataFrame.from_dict(dict_test, orient='index')\n",
+        "test_table = test_table.reset_index()\n",
+        "test_table.rename(columns={'index': 'item'}, inplace=True)\n",
         "test_table.to_csv('../datasets/properties/test_props.csv', index=True)"
       ]
     }
