final model and readme

--- a/src/RoBERTa.ipynb
+++ b/src/RoBERTa.ipynb
@@ -403,10 +403,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a8899b50",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('../models/RoBERTa/tokenizer_config.json',\n",
+       " '../models/RoBERTa/special_tokens_map.json',\n",
+       " '../models/RoBERTa/vocab.json',\n",
+       " '../models/RoBERTa/merges.txt',\n",
+       " '../models/RoBERTa/added_tokens.json',\n",
+       " '../models/RoBERTa/tokenizer.json')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Save the model\n",
     "model.save_pretrained(\"../models/RoBERTa\")\n",
