--- a/src/final_model.ipynb
+++ b/src/final_model.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-09-13 11:29:36.773491: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2025-09-14 11:07:15.644314: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -51,7 +51,7 @@
    "id": "210d7631",
    "metadata": {},
    "source": [
-    "In this notebook we are going to integrate three different models that we trained on three different 'kind' of data that capture different aspects of each item. More precisely we have three trained different models:\n",
+    "In this notebook we are going to integrate three different models that we trained on three different 'kind' of data that capture different aspects of each item. More precisely we have trained three different models:\n",
     "- `RoBERTa`: for analyzing text (the description of the item).\n",
     "- Two `MLP`, one for analyzing the the properties and one for analyzing statistical information and categorical features.\n",
     "\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "bc8c5119",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f4bb8395",
    "metadata": {},
    "outputs": [],
@@ -147,22 +147,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4f1ac07c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RoBERTa\n",
-    "roberta = AutoModelForSequenceClassification.from_pretrained(\"/content/drive/MyDrive/AILovePython_Shared_Folder/models/RoBERTa\")\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"/content/drive/MyDrive/AILovePython_Shared_Folder/models/RoBERTa\")\n",
+    "roberta = AutoModelForSequenceClassification.from_pretrained(\"../models/RoBERTa\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"../models/RoBERTa\")\n",
     "\n",
     "# Properties classifier\n",
-    "prop_state_dict = torch.load(\"/content/drive/MyDrive/AILovePython_Shared_Folder/models/prop_classifier.tar\", weights_only=True)\n",
+    "prop_state_dict = torch.load(\"../models/prop_classifier.tar\", weights_only=True)\n",
     "prop_classifier = PropertiesClassifier(input_dim=29, hidden1=20, hidden2=10, out_dim=3)\n",
     "prop_classifier.load_state_dict(prop_state_dict)\n",
     "\n",
     "# Statistical classifier\n",
-    "stats_state_dict = torch.load(\"/content/drive/MyDrive/AILovePython_Shared_Folder/models/stats_classifier.tar\", weights_only=True)\n",
+    "stats_state_dict = torch.load(\"../models/stats_classifier.tar\", weights_only=True)\n",
     "stats_classifier = StatsClassifier(input_dim=144, hidden1=70, hidden2=10, out_dim=3)\n",
     "stats_classifier.load_state_dict(stats_state_dict)"
    ]
@@ -177,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "ad2859cf",
    "metadata": {},
    "outputs": [],
@@ -219,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "ac0d2133",
    "metadata": {},
    "outputs": [],
@@ -243,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "128071a2",
    "metadata": {},
    "outputs": [],
@@ -280,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "984d9390",
    "metadata": {},
    "outputs": [],
@@ -300,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b2d4ad12",
    "metadata": {},
    "outputs": [],
@@ -310,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5cfb9f83",
    "metadata": {},
    "outputs": [],
@@ -393,7 +404,262 @@
    "id": "4b8ef05b",
    "metadata": {},
    "source": [
-    "Since there are some mismatches between the various datasets (properties, statistcs and decription), we do some cleaning."
+    "Since there are some mismatches between the various datasets (properties, statistcs and decription), we do some cleaning.  \n",
+    "NOTE: the mismatch is due to the fact that we had to remove some rows from the statistical datasets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d4f21bcd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_props = pd.read_csv('../datasets/properties/training_props.csv')\n",
+    "val_props = pd.read_csv('../datasets/properties/validation_props.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "f12d1394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the stats datasets\n",
+    "train_stats = pd.read_csv('../datasets/statistics/train_stats.csv')\n",
+    "val_stats = pd.read_csv('../datasets/statistics/val_stats.csv')\n",
+    "\n",
+    "# In the item column we still have the full links (http://www.wikidata.org/entity/Q32786)\n",
+    "# therefore we modify it to keep only the item's identifier (Q32786)\n",
+    "train_stats['item'] = train_stats['item'].apply(lambda x: x.strip().split('/')[-1])\n",
+    "val_stats['item'] = val_stats['item'].apply(lambda x: x.strip().split('/')[-1])\n",
+    "\n",
+    "# Finally we remove from the properties datasets the items that are not present in the\n",
+    "# statistical datasets\n",
+    "cleaned_train_props = train_props[train_props['item'].isin(train_stats['item'])]\n",
+    "cleaned_val_props = val_props[val_props['item'].isin(val_stats['item'])]\n",
+    "\n",
+    "# We reset the index\n",
+    "cleaned_train_props = cleaned_train_props.reset_index(drop=True)\n",
+    "cleaned_val_props = cleaned_val_props.reset_index(drop=True)\n",
+    "\n",
+    "# Finally, we drop the first two columns (index, item) since we don't need them\n",
+    "cleaned_train_props = cleaned_train_props.drop(columns=['Unnamed: 0','item'])\n",
+    "cleaned_val_props = cleaned_val_props.drop(columns=['Unnamed: 0','item'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03665cdb",
+   "metadata": {},
+   "source": [
+    "Now we need to do the same for the descriptions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "3224ddfc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets = load_from_disk('../datasets/train_and_val')\n",
+    "train_descirptions = pd.DataFrame({'item': list(datasets['train']['item']), 'description': list(datasets['train']['description'])})\n",
+    "val_descriptions = pd.DataFrame({'item': list(datasets['validation']['item']), 'description': list(datasets['validation']['description'])})\n",
+    "\n",
+    "# As before, we keep only the item's idetifier\n",
+    "train_descirptions['item'] = train_descirptions['item'].apply(lambda x: x.strip().split('/')[-1])\n",
+    "val_descriptions['item'] = val_descriptions['item'].apply(lambda x: x.strip().split('/')[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "49d3d381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_train_descriptions = train_descirptions[train_descirptions['item'].isin(train_stats['item'])]\n",
+    "cleaned_val_descriptions = val_descriptions[val_descriptions['item'].isin(val_stats['item'])]\n",
+    "\n",
+    "cleaned_train_descriptions = cleaned_train_descriptions.reset_index(drop=True)\n",
+    "cleaned_val_descriptions = cleaned_val_descriptions.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f18b8beb",
+   "metadata": {},
+   "source": [
+    "In the stats datasets we retrieved some useful statistical data, that we thought could help to perform the classification task. Precisey we stored the following informations:\n",
+    "\n",
+    "We have columns that store information about the text distribution, and more precisely we have the following attributes:\n",
+    "- text_distribution: array storing length if wikipedia texts connected to the item\n",
+    "- avg_text: mean of the text distribution quantity\n",
+    "- std_text: standard deviation of the distrinution quantity\n",
+    "- len: number of wikipedia links connected to the item\n",
+    "- entropy_text: entropy computed on the text_distrinution\n",
+    "- gini_text: gini's index computed on text_distribution\n",
+    "- sum_over_texts: sum of the values in text distribution\n",
+    "\n",
+    "\n",
+    "Then we have another set of columns storing data about the references to each item's wikipedia page. So similarly to before we have:\n",
+    "- ref_distribution: array storing the number of references to each item wikipedia page\n",
+    "- avg_ref: mean of the ref_distribution quantity\n",
+    "- std_ref: standard deviation of the ref_distribution quantity\n",
+    "- entropy_ref: entropy computed on the ref_distrbution\n",
+    "- gini_ref: gini's index computed on the ref_distribution\n",
+    "- sum_over_ref: sum of the values in the ref_didtribution quantity\n",
+    "\n",
+    "Finally, we have otther four columns:\n",
+    "- h_adj_descr: euristic counting the number of attributes (italian, chinese, english,...) on the description\n",
+    "- h_nat_descr: euristic counting the number of nations in the description of the item\n",
+    "- h_adj_engtext: euristic counting the number of attributes (italian, chinese, english,...) on the english wikipedia text\n",
+    "- h_nat_engtext: euristic counting the number of nations in the english wikipedia text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe38a0ee",
+   "metadata": {},
+   "source": [
+    "Here we are going to keep also some categorical features that are useful in performing the classification task. To deal with this we are going to perform a **one-hot** encoding on these attributes. Moreover, it is useful to normalize the statistical features, since they have different scales. To do so we are going to use the `StandardScaler` module from `sklearn`, that applies the following transformation to the data:\n",
+    "$$\\tilde{x} = \\frac{x - \\mu}{\\sigma}$$\n",
+    "where $\\mu$ is the mean of the trainig samples and $\\sigma$ the standard deviation. With this transformation the whole dataset will have, approximately. mean 0 and standard deviation 1.\n",
+    "\n",
+    "Since we have two different tranformations to apply to the dataset we are going to use the `ColumnTranformer` module from sklearn, that simplifies considerably the whole procedure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "5cebb855",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = OneHotEncoder(sparse_output=False, handle_unknown='ignore')\n",
+    "\n",
+    "categorical_features = ['type', 'category', 'subcategory']\n",
+    "stats_features = ['std_text', 'avg_text', 'len', 'entropy_text', 'gini_text',\n",
+    "       'sum_over_texts', 'std_ref', 'avg_ref', 'sum_over_ref', 'entropy_ref',\n",
+    "       'gini_ref', 'h_adj_descr', 'h_nat_descr', 'h_adj_engtext',\n",
+    "       'h_nat_engtext']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b65a9300",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Here we are going to drop the text_distribution and ref_distribution columns.\n",
+    "# We do so because they have a different type of data structure (array) with respect\n",
+    "# to the other attributes (scalars) and so it is a bit more complicated to deal with\n",
+    "# both kind of data. Moreover, there are other attributes that store all the relevant information\n",
+    "# about these two distributions. Then we also drop the 'item', 'name' and 'label' column\n",
+    "\n",
+    "train_labels = train_stats['label']\n",
+    "train_stats = train_stats.drop(columns=['item', 'name', 'label',\n",
+    "                                          'countryLabel', 'subclass_ofLabel', 'text_distribution',\n",
+    "                                          'ref_distribution'])\n",
+    "val_labels = val_stats['label']\n",
+    "val_stats = val_stats.drop(columns=['item', 'name', 'label',\n",
+    "                                          'countryLabel', 'subclass_ofLabel', 'text_distribution',\n",
+    "                                          'ref_distribution'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "2c628c46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct = ColumnTransformer(\n",
+    "    [(\"text_preprocess\", encoder, categorical_features),\n",
+    "     ('stats_preprocess', StandardScaler(), stats_features)]\n",
+    ")\n",
+    "\n",
+    "## tranformerd datasets\n",
+    "transformed_train_stats = ct.fit_transform(train_stats)\n",
+    "transformed_val_stats = ct.transform(val_stats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7773757",
+   "metadata": {},
+   "source": [
+    "Before proceeding, let's male a fast recap of the datasets that we have:\n",
+    "\n",
+    "- Two datasets containing the values of the properties:\n",
+    "    - cleaned_train_props\n",
+    "    - cleaned_val_props\n",
+    "- Two datasets containing the descriptions:\n",
+    "    - cleaned_train_descriptions\n",
+    "    - cleaned_val_descriptions\n",
+    "- Two datasets containing statistical information:\n",
+    "    - transformed_train_stats\n",
+    "    - tranformed_val_stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a9799e38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6193\n",
+      "6193\n",
+      "6193\n",
+      "6193\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(cleaned_train_descriptions))\n",
+    "print(len(cleaned_train_props))\n",
+    "print(len(transformed_train_stats))\n",
+    "print(len(train_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca8baf2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sanity check\n",
+    "assert len(cleaned_train_descriptions) == len(cleaned_train_props) == len(transformed_train_stats) == len(train_labels)\n",
+    "\n",
+    "assert len(cleaned_val_descriptions) == len(cleaned_val_props) == len(transformed_val_stats) == len(val_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e2a2d3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we can generate the training and validation datasets\n",
+    "\n",
+    "training_samples = IntegratedDataset(desc_dataset=cleaned_train_descriptions,\n",
+    "                                     prop_dataset=cleaned_train_props,\n",
+    "                                     stats_dataset=transformed_train_stats,\n",
+    "                                     labels=train_labels)\n",
+    "\n",
+    "validation_samples = IntegratedDataset(desc_dataset=cleaned_val_descriptions,\n",
+    "                                      prop_dataset=cleaned_val_props,\n",
+    "                                      stats_dataset=transformed_val_stats,\n",
+    "                                      labels=val_labels)"
    ]
   }
  ],
